--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-media-recorder": "^1.6.6",
+    "react-media-recorder": "^1.4.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@types/node": "^18.16.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
