--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
+    "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
